--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
       }
     ],
     "linebreak-style": 0,
-    "jsx-a11y/label-has-associated-control": ["error", { "assert": "either" }],
+    "jsx-a11y/label-has-associated-control": "off",
     "no-restricted-imports": "off",
     "@typescript-eslint/no-restricted-imports": [
       "warn",
