--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
