--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
