Fix: erros axios utils and delete console log and unused imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,13 @@
         "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
       }
     ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "projectDependencies": false
+      }
+    ],
     "import/prefer-default-export": "off"
   }
+  
 }
