--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "sass": "^1.62.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.8"
+    "vite": "^4.3.8",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
